tests/neg/i20511.scala
package pakiet

def toppingPrice(size: Int): Double = ???

def crustPrice(crustType: Double): Double = ???

export toppingPrice, crustPrice // error // error
val i = 1 // error
